# quant-challenge

rust/: Cargo.toml
rust/src/: main.rs
rust/src/infrastructure/exchange/bybit/: client.rs  config.rs  mapping.rs  mod.rs
rust/src/infrastructure/exchange/bybit/api/: market.rs  mod.rs  models.rs
