[package]
name = "quant-challenge"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
async-trait = "0.1.88"
anyhow = "1.0.98"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.126"
crypto-botters = {version = "0.6.0", features = ["bybit"]}

[features]
demo = []
prod = []
